tests/paczka1/fuzzy1/51026251.err
Error in line 1: 7Bt5 S417 84,6
Error in line 3: VKa S591 86,7
Error in line 23: 2hx6zq1EKWh S417 38,4
Error in line 17: KNb4X S249 11,0
Error in line 24: 2hx6zq1EKWh S249 73,3
Error in line 30: 7Bt5 S591 11,0
Error in line 40: 2hx6zq1EKWh S534 9,42
